# AugmentCleanCursor

./: LICENSE  README.md  README_PT.md  pyproject.toml
augment-code-free-cli/: README.md  main.py  run_gui.py
augment-code-free-cli/augment_tools_core/: cli.py  common_utils.py  database_manager.py
augment-code-free-gui/: .gitignore  AugmentFree.spec  README.md  README_EN.md  app.icns  pyproject.toml  requirements.txt  run.py
augment-code-free-gui/.github/workflows/: build-and-release.yml
augment-code-free-gui/scripts/: build.py
augment-code-free-gui/src/augment_free/: __init__.py  main.py
augment-code-free-gui/src/augment_free/api/: __init__.py  core.py
augment-code-free-gui/src/augment_free/api/handlers/: __init__.py  database.py  jetbrains.py  telemetry.py  workspace.py
augment-code-free-gui/src/augment_free/utils/: __init__.py  device_codes.py  ide_detector.py  paths.py
augment-code-free-gui/src/augment_free/web/: index.html
augment-code-free-gui/src/augment_free/web/css/: style.css
augment-code-free-gui/src/augment_free/web/js/: app.js
augment-vip-toolkit/: README.md  requirements.txt  setup.py  test_new_commands.py
augment-vip-toolkit/augment_vip/: __init__.py  cli.py
augment_vip/: __init__.py  cli.py  id_modifier.py
cursor-augment-toolkit/: .gitignore  CHANGELOG.md  README.md
cursor-augment-toolkit/augment_vip/: db_cleaner.py  utils.py
cursor-augment-toolkit/docs/: README-python.md
cursor-augment-toolkit/scripts/: install.py  install.sh
docs/: USAGE.md
