[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "augment-vip"
version = "2.0.0"
description = "A powerful toolkit for managing Cursor settings, databases, and extensions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Azril Aiman", email = "me@azrilaiman.my"}
]
maintainers = [
    {name = "Azril Aiman", email = "me@azrilaiman.my"}
]
keywords = ["cursor", "vscode", "database", "extensions", "telemetry", "privacy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: System Shells",
    "Topic :: Utilities"
]
requires-python = ">=3.6"
dependencies = [
    "click>=7.0",
    "colorama>=0.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800"
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0"
]

[project.urls]
Homepage = "https://github.com/azrilaiman2003/augment-vip"
Repository = "https://github.com/azrilaiman2003/augment-vip.git"
Documentation = "https://github.com/azrilaiman2003/augment-vip/blob/main/docs/USAGE.md"
"Bug Tracker" = "https://github.com/azrilaiman2003/augment-vip/issues"
Changelog = "https://github.com/azrilaiman2003/augment-vip/releases"

[project.scripts]
augment-vip = "augment_vip.cli:main"

[tool.setuptools]
packages = ["augment_vip"]

[tool.setuptools.package-data]
augment_vip = ["*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py"
]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["augment_vip"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
